<resources>
    <string name="app_name">몬딱충전</string>

    <!-- 로그인 -->
    <string name="login_id_hint">아이디 또는 이메일</string>
    <string name="login_pw_hint">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="login_register">회원가입</string>
    <string name="login_reject">가입하지 않은 아이디이거나, 잘못된 비밀번호입니다.</string>
    <string name="login_email">이메일을 입력하여 주시기 바랍니다.</string>
    <string name="login_password">비밀번호를 입력하여 주시기 바랍니다.</string>
    <string name="login_find_id">아이디 찾기</string>

    <!-- 회원가입 -->
    <string name="register_user_title">회원가입</string>
    <string name="register_user_name">이름</string>
    <string name="register_name_hint">실명 입력</string>
    <string name="register_user_phone">전화번호</string>
    <string name="register_phone_hint">-제외하고 숫자만 입력</string>
    <string name="register_email_hint">example@gmail.com</string>
    <string name="register_check_duplicate">중복체크</string>
    <string name="register_certification_number">인증번호</string>
    <string name="register_certification">인증요청</string>
    <string name="register_certification_hint">인증번호 입력</string>
    <string name="register_pw">비밀번호</string>
    <string name="register_confirm_pw">비밀번호 확인</string>
    <string name="register_time_remaining">남은 시간 : </string>
    <string name="register_confirmation">완료</string>
    <string name="register_star">*</string>
    <string name="register_pw_hint">영문, 숫자, 특수 문자 포함하여 최소 6자 이상</string>

    <!-- 비밀번호 변경-->
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_confirm">새 비밀번호 확인</string>
    <string name="change_password">비밀번호 변경</string>

    <!-- 설정-->
    <string name="setting_time">충전 시간 설정</string>
    <string name="setting_card">결제 카드 설정</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_change_user_type">소유주 전환</string>
    <string name="setting_change_user_type_error">소유주 전환중 예상치 못한 오류가 발생하였습니다.\n재로그인후 문제 지속시 고객센터로 문의주세요.</string>

    <!-- 메인-->
    <string name="search_condition_title_total">총&#160;</string>
    <string name="search_condition_title_charging">&#160;충전</string>
    <string name="main_charge_amt_key">충전 요금 : 시간당&#160;</string>
    <string name="charger_detail_address_text">상세주소 : %1$s</string>

    <!-- 예약진행-->
    <string name="reservation_progress_title">예약 진행</string>
    <string name="reservation_progress_precautions">※ 예약 전 주의사항</string>
    <string name="reservation_progress_txt">예약완료 버튼 클릭 시 포인트가 차감됩니다. 포인트 부족시에는 포인트를 충전 후 예약을 진행하여 주시기 바랍니다.</string>

    <!-- 충전기 조검검색-->
    <string name="search_condition_start_date">충전 시작 일시</string>
    <string name="search_condition_end_date">충전 시간</string>
    <string name="search_condition_radius_range">범위</string>
    <string name="search_condition_type">타입</string>
    <string name="search_condition_go_charging">즉시 충전</string>
    <string name="search_condition_reserve_charging">예약 충전</string>

    <!-- 포인트 -->
    <string name="point">p</string>
    <string name="point_charge">포인트 충전</string>
    <string name="point_charge_message">결제하실 금액을 선택하여 주십시오.</string>

    <!-- 충전기 검색-->
    <string name="search_device">충전기 검색</string>

    <!-- 메인 검색-->
    <string name="search_condition_my_place">내위치중심</string>
    <string name="search_condition_map_place">지도중심</string>

    <!-- 이력조회-->
    <string name="charge_history_title">충전기 사용 이력</string>
    <string name="point_history_title">포인트 구매 내역</string>

    <!-- 충전기 사용 이력-->
    <string name="charge_history_recharge_number">충전 번호 : %1$s</string>
    <string name="charge_history_reservation_point">예약 차감 포인트 : %1$s</string>
    <string name="charge_history_recharge_point">충전 사용 포인트 : %1$s</string>
    <string name="charge_history_refund_point">환불 포인트 : %1$s</string>
    <string name="admin_charge_history_charger_name">충전기명 : %1$s</string>
    <string name="admin_charge_history_profit_point">수익 포인트 : %1$s</string>
    <string name="admin_charge_history_reservation_date">예약 일자 : %1$s</string>
    <string name="admin_charge_history_charge_date">충전 일자 : %1$s</string>

    <!-- 즐겨찾기-->
    <string name="bookmark_title">즐겨찾기</string>
    <string name="bookmark_navigation">지도보기</string>
    <string name="bookmark_delete">삭제</string>

    <!-- 소유주 대시보드 -->
    <string name="dashboard_title">대시보드</string>
    <string name="dashboard_charger_count_text">충전기 대수\n(가능/전체)</string>
    <string name="dashboard_charger_count">%1$s/%2$s 대</string>
    <string name="dashboard_monthly_use_count_text">이달의\n이용 건수</string>
    <string name="dashboard_monthly_use_count">%1$s 건</string>
    <string name="dashboard_monthly_error_count_text">이달의\nERROR 건수</string>
    <string name="dashboard_monthly_error_count">%1$s 건</string>
    <string name="dashboard_monthly_profit_point_text">이달의\n수익 포인트</string>
    <string name="dashboard_monthly_profit_point">%1$s P</string>
    <string name="dashboard_monthly_reservation_count_text">이달의\n예약 건수</string>
    <string name="dashboard_monthly_reservation_count">%1$s 건</string>
    <string name="dashboard_monthly_charge_amount_text">이달의\n충전량</string>
    <string name="dashboard_monthly_charge_amount">%1$s KWh</string>
    <string name="dashboard_monthly_profit_point_title">월별 수익 포인트</string>

    <!-- 소유주 충전기 관리 -->
    <string name="charger_manage_title">충전기 관리</string>
    <string name="charger_manage_waiting">대기중</string>
    <string name="charger_manage_using">사용중</string>
    <string name="charger_manage_charger_ble_text">- %1$s</string>

    <!-- 기타-->
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="search_condition">검색 조건</string>
    <string name="go_charge">충전하기</string>
    <string name="go_reserve">예약하기</string>
    <string name="image_description">description</string>
    <string name="time_countdown">03:00</string>
    <string name="from_to">&#160;~&#160;</string>
    <string name="charge">충전</string>
    <string name="minute30">30분</string>
    <string name="change">변경</string>
    <string name="rescan">재검색</string>

    <!-- 메세지-->
    <string name="m_password_confirm_text">비밀번호를 변경하시겠습니까?</string>

    <!-- 회원 증명서 -->
    <string name="user_identification_title">회원 증명서</string>
    <string name="user_identification_did">발급 DID</string>
    <string name="user_identification_created_date">발급 일자</string>

</resources>