<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layout_register"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white">

        <include
            android:id="@+id/include_header"
            layout="@layout/layout_header"
            android:layout_width="fill_parent"
            android:layout_height="46dp" />

        <TextView
            android:id="@+id/register_text_dummy"
            style="@style/sign_up_header"
            android:layout_below="@id/include_header"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/register_text_dummy"
            android:layout_above="@+id/register_btn">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- 이름-->
                <TextView
                    android:id="@+id/user_name_text"
                    style="@style/register_title_txt"
                    android:layout_marginTop="30dp"
                    android:text="@string/register_user_name"/>

                <TextView
                    android:layout_toEndOf="@id/user_name_text"
                    android:layout_alignTop="@id/user_name_text"
                    style="@style/register_star_txt"/>

                <EditText
                    android:id="@+id/user_name_input"
                    android:layout_below="@id/user_name_text"
                    android:hint="@string/register_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    style="@style/register_edit_txt"/>

                <!-- 전화번호-->
                <TextView
                    android:id="@+id/user_phone_text"
                    android:layout_below="@id/user_name_input"
                    style="@style/register_title_txt"
                    android:text="@string/register_user_phone"/>

                <TextView
                    android:layout_toEndOf="@id/user_phone_text"
                    android:layout_alignTop="@id/user_phone_text"
                    style="@style/register_star_txt"/>

                <EditText
                    android:id="@+id/user_phone_input"
                    android:layout_below="@id/user_phone_text"
                    android:hint="@string/register_phone_hint"
                    android:maxLength="12"
                    android:inputType="number"
                    android:importantForAutofill="no"
                    style="@style/register_edit_txt"/>

                <Button
                    android:id="@+id/certification_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignTop="@+id/user_phone_input"
                    android:layout_alignEnd="@+id/user_phone_input"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/button_border_blue"
                    android:text="@string/register_certification"
                    android:textColor="@color/white" />

                <!-- 인증번호-->
                <TextView
                    android:id="@+id/certification_number_text"
                    android:layout_below="@id/user_phone_input"
                    style="@style/register_title_txt"
                    android:text="@string/register_certification_number"/>

                <TextView
                    android:layout_toEndOf="@id/certification_number_text"
                    android:layout_alignTop="@id/certification_number_text"
                    style="@style/register_star_txt"/>

                <EditText
                    android:id="@+id/certification_input"
                    android:layout_below="@id/certification_number_text"
                    android:hint="@string/register_certification_hint"
                    style="@style/register_edit_txt"
                    android:maxLength="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:layout_marginBottom="0dp"/>

                <!-- 인증요청 남은시간-->
                <RelativeLayout
                    android:id="@+id/remaining_time_layout"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/certification_input">

                    <TextView
                        android:id="@+id/remaining_time_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_time_remaining"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/red"/>

                    <TextView
                        android:id="@+id/remaining_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/remaining_time_text"
                        android:layout_alignTop="@id/remaining_time_text"
                        android:text="@string/time_countdown"
                        android:textColor="@color/red"/>

                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

        <!-- 완료버튼-->
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_border_blue"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>

</layout>