<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/login_id_hint"
            android:importantForAutofill="no"
            style="@style/margin_start_end_20"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:text="test.name@user.com"
            android:privateImeOptions="defaultInputmode=english"
            android:backgroundTint="@color/neutral_tint"/>

        <EditText
            android:id="@+id/login_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_pw_hint"
            android:importantForAutofill="no"
            android:layout_below="@id/login_id"
            style="@style/margin_start_end_20"
            android:text="qw21QW@!"
            android:layout_marginBottom="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:backgroundTint="@color/neutral_tint"/>

        <LinearLayout
            android:id="@+id/login_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/margin_start_end_20"
            android:layout_below="@id/login_pw">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_border_blue_click"
                style="?android:attr/buttonStyle"
                android:text="@string/login_btn"
                android:textColor="@color/white"
                android:textSize="16dp"/>

            <Button
                android:id="@+id/login_register_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray_button"
                style="?android:attr/buttonStyle"
                android:text="@string/login_register"
                android:textColor="@color/white"
                android:textSize="16dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/login_reset_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_linear_layout"
            android:text="@string/change_password"
            android:layout_marginTop="15dp"
            android:gravity="center"/>

    </RelativeLayout>
</layout>