<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white">

        <include
            android:id="@+id/include_header"
            layout="@layout/layout_header"
            android:layout_width="fill_parent"
            android:layout_height="46dp" />

        <TextView
            android:id="@+id/register_text_dummy"
            style="@style/header_dummy"
            android:layout_below="@id/include_header"/>

        <!-- 현재 비밀번호-->
        <TextView
            android:id="@+id/current_pw_title"
            android:layout_below="@id/register_text_dummy"
            style="@style/register_title_txt"
            android:text="@string/current_password"/>

        <TextView
            android:id="@+id/current_pw_star"
            android:layout_toEndOf="@id/current_pw_title"
            android:layout_alignTop="@id/current_pw_title"
            style="@style/register_star_txt"/>

        <EditText
            android:id="@+id/current_pw_input"
            android:layout_below="@id/current_pw_title"
            android:inputType="textPassword"
            style="@style/register_edit_txt"/>

        <!-- 새 비밀번호-->
        <TextView
            android:id="@+id/new_pw_title"
            android:layout_below="@id/current_pw_input"
            style="@style/register_title_txt"
            android:text="@string/new_password"/>

        <TextView
            android:layout_toEndOf="@id/new_pw_title"
            android:layout_alignTop="@id/new_pw_title"
            style="@style/register_star_txt"/>

        <EditText
            android:id="@+id/new_pw_input"
            android:layout_below="@id/new_pw_title"
            android:inputType="textPassword"
            android:hint="@string/register_pw_hint"
            style="@style/register_edit_txt"/>

        <!-- 새 비밀번호 확인-->
        <TextView
            android:id="@+id/new_pw_confirm_title"
            android:layout_below="@id/new_pw_input"
            style="@style/register_title_txt"
            android:text="@string/new_password_confirm"/>

        <TextView
            android:layout_toEndOf="@id/new_pw_confirm_title"
            android:layout_alignTop="@id/new_pw_confirm_title"
            style="@style/register_star_txt"/>

        <EditText
            android:id="@+id/new_pw_confirm_input"
            android:layout_below="@id/new_pw_confirm_title"
            android:inputType="textPassword"
            android:hint="@string/register_pw_hint"
            style="@style/register_edit_txt"/>

        <Button
            android:id="@+id/change_pw_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_blue"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</layout>